2009-04-27  Taco Hoekwater <taco@luatex.org>

	* pdf/pdfpage.c: rename exp10 to exp10_arr to solve a 
	conflict with cygwin's <math.h>.
	* font/texfont.h: add #undef quad before definition to suppress a
	compiler warning under cygwin. 

2009-04-22  Taco Hoekwater <taco@luatex.org>

	* luatexdir: import of the current state of luatex, 0.40.0. 
	This affects many files in subdirectories.

2009-04-16  Taco Hoekwater <taco@luatex.org>

	* image/image.h: remove the trick that forced a local png.h

2009-04-16  Taco Hoekwater <taco@luatex.org>

	* luatexdir: import of the current state of luatex, 0.39.0. 
	This affects many files in subdirectories.

2009-03-27  Peter Breitenlohner <peb@mppmu.mpg.de>

	* am/luatex.am (luatex_c_h): avoid to split the C code
	(from Taco).

2009-03-27  Taco Hoekwater <taco@luatex.org>

	* luatexdir: import of the current state of luatex, 0.37.0. 
	This affects many files in subdirectories.

2009-03-05  Peter Breitenlohner <peb@mppmu.mpg.de>

	* image/pdftoepdf.cc: Uninclude <config.h>, included later
	by "epdf.h".

2009-03-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatangle.ch: use kpse_open_file to locate input files,
	in order to respect WEBINPUTS (ported from tangle.ch).